source/terraform/platform/cert-manager.tf
resource "kubernetes_namespace" "cert-manager" {
  metadata {
    name = "cert-manager"

    labels = {
      "kubernetes.io/metadata.name" = "cert-manager"
      "name"                        = "cert-manager"
    }
  }
}

resource "kubernetes_secret" "ca-key-pair" {
  metadata {
    name      = "ca-key-pair"
    namespace = kubernetes_namespace.cert-manager.metadata[0].name
  }

  binary_data = {
    "tls.crt" = "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlGdXpDQ0E2T2dBd0lCQWdJVE53QUFBQkwyTDYwNFNWQ1NhZ0FBQUFBQUVqQU5CZ2txaGtpRzl3MEJBUXNGDQpBREFkTVJzd0dRWURWUVFERXhKUmRXbGphM05wYkhaaElGSnZiM1FnUTBFd0hoY05NakV4TURBMk1UVTBPRFUwDQpXaGNOTXpjd01UTXdNVEUxTlRFMFdqQlZNUXN3Q1FZRFZRUUdFd0pWU3pFU01CQUdBMVVFQ0JNSlYybHNkSE5vDQphWEpsTVJNd0VRWURWUVFLRXdwUmRXbGphM05wYkhaaE1SMHdHd1lEVlFRREV4UnpaV1ZSWlhJZ1EyeDFjM1JsDQpjaUJUZFdKRFFUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUk4dHI3ekt5L2E5DQpFUk4 [...]
    "tls.key" = "LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb2dJQkFBS0NBUUVBankydnZNckw5cjBSRTM1em8zZlFPM2FaNVljMkJobno0ZG84bzQ5S2p4Vkc4WmdhCmhHWjZWTmVRQVN2aHM0eEx3ZWppZUt6aU0vQ3BjakpYVUk5N2xia01pOXI2eEo3RVRPbWdvS1RCdnhPblBEUm0KUkg5bWpVTkNMdWcxTTJUbWh5Q1NPRWZ1aDIwUEpBbGZNZnRmOVdlbHVUMzA4Ui8yUkQ3czRPK0JwcDNZNXRjUQpNQWE2V3ZEeWwwWFg3RFd4UWx6VFMrTXNQNDlqa1o5NjFlNVpiUjFnUXMvbnR6VTRSZjk4Ykoya1QxWEJvcS8zCjR5MmpjN21VUXNkMEpnQldmdDNZUWJRM2FGRWNpQ3FjNG1WaGI1M2dxOWoySXBTVDhPZ2U4aEl6UUJkUWszaUkKVmh2Mmd [...]
  }

  type = "kubernetes.io/tls"

}

resource "kubernetes_secret" "cloudflare-api-token" {
  metadata {
    name      = "cloudflare-api-token"
    namespace = kubernetes_namespace.cert-manager.metadata[0].name
  }

  data = {
    api-token = "${var.cloudflare_api_token}"
  }

  type = "opaque"
}


# Deploy Cert Manager
resource "helm_release" "cert-manager" {
  name       = var.cert_manager_chart
  repository = var.cert_manager_repository
  chart      = var.cert_manager_chart
  namespace  = kubernetes_namespace.cert-manager.metadata[0].name

  create_namespace = false

  values = [
    file("values/cert-manager/values.yaml")
  ]

  #depends_on = [
  #  helm_release.kube-prometheus-stack
  #]
}


resource "kubectl_manifest" "ca-issuer" {
  yaml_body = file("values/cert-manager/ca-issuer.yaml")

  depends_on = [
    kubernetes_secret.ca-key-pair,
    helm_release.cert-manager
  ]

}

resource "kubectl_manifest" "le-issuer" {
  yaml_body = file("values/cert-manager/le-issuer.yaml")

  depends_on = [
    kubernetes_secret.cloudflare-api-token,
    helm_release.cert-manager
  ]

}
